Feat(Backend) Load 3rd party repositories (#196)
* Move dir

* Refactoring

* Merge conflicts

* Testing config

* Added logging library

* Monocular chart

* Documentation

* repo source
